5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1638_652.log
== SUBMITION (2019-04-11 19:37:38) 
-- CODE:
n = int(input("Digite o numero: "))
d1 = (n//100)%10

if(n % (n - d1) == 0):
	print("SIM")
	
else:
	print("NAO")
-- EXECUTION TIME:
0.199004
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:37:40) 
-- CODE:
n = int(input("Digite o numero: "))
d1 = (n//100)%10

if(n % (n - d1) == 0):
	print("SIM")
	
else:
	print("NAO")
-- EXECUTION TIME:
0.203099
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:37:40) 
-- CODE:
n = int(input("Digite o numero: "))
d1 = (n//100)%10

if(n % (n - d1) == 0):
	print("SIM")
	
else:
	print("NAO")
-- EXECUTION TIME:
0.299594
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:37:40) 
-- CODE:
n = int(input("Digite o numero: "))
d1 = (n//100)%10

if(n % (n - d1) == 0):
	print("SIM")
	
else:
	print("NAO")
-- EXECUTION TIME:
0.155915
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/652/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:37:41) 
-- CODE:
n = int(input("Digite o numero: "))
d1 = (n//100)%10

if(n % (n - d1) == 0):
	print("SIM")
	
else:
	print("NAO")
-- EXECUTION TIME:
0.233559
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/652/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:37:41) 
-- CODE:
n = int(input("Digite o numero: "))
d1 = (n//100)%10

if(n % (n - d1) == 0):
	print("SIM")
	
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:37:59) 
-- CODE:
n = int(input("Digite o numero: "))
d1 = (n//100)Y

if(n % (n - d1) == 0):
	print("SIM")
	
else:
	print("NAO")
-- EXECUTION TIME:
0.17114
-- ERROR:
  File "/home/codebench/codes/1638/652/main.py", line 2
    d1 = (n//100)Y
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:38:00) 
-- CODE:
n = int(input("Digite o numero: "))
d1 = (n//100)

if(n % (n - d1) == 0):
	print("SIM")
	
else:
	print("NAO")
-- EXECUTION TIME:
0.146116
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:38:01) 
-- CODE:
n = int(input("Digite o numero: "))
d1 = (n//100)

if(n % (n - d1) == 0):
	print("SIM")
	
else:
	print("NAO")
-- EXECUTION TIME:
0.155045
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:38:01) 
-- CODE:
n = int(input("Digite o numero: "))
d1 = (n//100)

if(n % (n - d1) == 0):
	print("SIM")
	
else:
	print("NAO")
-- EXECUTION TIME:
0.27248
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:38:01) 
-- CODE:
n = int(input("Digite o numero: "))
d1 = (n//100)

if(n % (n - d1) == 0):
	print("SIM")
	
else:
	print("NAO")
-- EXECUTION TIME:
0.12231
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/652/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:19:55) 
-- CODE:
n = int(input("Digite o numero: "))
d1 = (n//100)

if(n // (n - d1) == 0):
	print("SIM")
	
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:19:59) 
-- CODE:
n = int(input("Digite o numero: "))
d1 = (n//100)

if(n // (n - d1) == 0):
	print("SIM")
	
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:21:10) 
-- CODE:
n = int(input("Digite o numero: "))
d1 = (n//100)*100

if(n % (n - d1) == 0):
	print("SIM")
	
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:21:15) 
-- CODE:
n = int(input("Digite o numero: "))
d1 = (n//100)*100

if(n % (n - d1) == 0):
	print("SIM")
	
else:
	print("NAO")
-- EXECUTION TIME:
0.195637
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
